@@ -2,6 +2,7 @@
 * Load categories on map via AJAX - CHANGED
 * Map with full page width shows scroll bar when toggle categories - FIXED
 * OpenStreetMap add touchZoom map option - ADDED
+* Preview page is not showing post images & tabs on Listimia theme - FIXED
 
 = 2.1.0.3 =
 * Kleo & Listimia themes not compatible with new AUI styles, revert to legacy styles if active - FIXED
